--- a/web/views/Home.html
+++ b/web/views/Home.html
@@ -1,4 +1,14 @@
-<h1>BEM VINDO!!</h1>
+<div class="container">
 
-
-<button type="button" ng-click="buscar()" class="btn btn-large btn-block btn-default">Buscar</button>
+  <h1>People</h1>
+  <div ng-repeat="p in people" class="col-3 box-content">
+    <div class="box">
+      <p>
+        Name: {{p.name}}, <small>Id: {{p.id}}</small>
+      </p>
+      <p>
+        Info: {{p.disclosableInfo}}
+      </p>
+    </div>
+  </div>
+</div>
