--- a/web/assets/css/custom.css
+++ b/web/assets/css/custom.css
@@ -1,90 +1,105 @@
 .box {
-  padding: 15px;
-  width: auto;
-  position: sticky;
-  margin: 10px;
-  border-top: solid 1px black;
-  border-bottom: solid 1px black;
-  border-right: solid 1px black;
+    width: auto;
+    position: sticky;
+    margin: 10px;
 }
-.box:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  background-color: #0a5293;
-  width: 3px;
+.box-body {
+    padding: 15px;
 }
+/*.box:before {
+content: '';
+position: absolute;
+top: 0;
+left: 0;
+height: 100%;
+background-color: #0a5293;
+width: 3px;
+}*/
 .box-content {
-  display: relative;
+    display: relative;
+}
+.box-title {
+    background-color: #e8e6e6;
+    padding: 10px;
+}
+.card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+.FRight{
+    float: right;
 }
 
 @media screen and (min-width: 1921px) {
-  .container {
-    margin-left: auto;
-    margin-right: auto;
-    width:auto;
-    max-width: 100%;
-    margin: 25px;
-    position: relative;
-  }
-  .col-3{
-    float: left;
-    display: block;
-    position: relative;
-    width: 20%;
-  }
+    .container {
+        margin-left: auto;
+        margin-right: auto;
+        width:auto;
+        max-width: 100%;
+        margin: 25px;
+        position: relative;
+    }
+    .col-3{
+        float: left;
+        display: block;
+        position: relative;
+        width: 20%;
+    }
 }
 
 @media screen and (min-width: 721px) and (max-width: 1920px) {
-  .container {
-    margin-left: auto;
-    margin-right: auto;
-    width:auto;
-    max-width: 1900px;
-    margin: 25px;
-    position: relative;
-  }
-  .col-3{
-    float: left;
-    display: block;
-    position: relative;
-    width: 30%;
-  }
+    .container {
+        margin-left: auto;
+        margin-right: auto;
+        width:auto;
+        max-width: 1900px;
+        margin: 25px;
+        position: relative;
+    }
+    .col-3{
+        float: left;
+        display: block;
+        position: relative;
+        width: 30%;
+    }
 }
 
 
 
 @media screen and (min-width: 480px) and (max-width: 720px) {
-  .container {
-    margin-left: auto;
-    margin-right: auto;
-    width:auto;
-    max-width: 700px;
-    margin: 25px;
-  }
-  .col-3{
-    float: left;
-    display: block;
-    position: relative;
-    width: 50%;
-  }
+    .container {
+        margin-left: auto;
+        margin-right: auto;
+        width:auto;
+        max-width: 700px;
+        margin: 25px;
+    }
+    .col-3{
+        float: left;
+        display: block;
+        position: relative;
+        width: 50%;
+    }
 }
 
 
 @media screen and (mix-width: 480px) {
-  .container {
-    margin-left: auto;
-    margin-right: auto;
-    width:auto;
-    max-width: 460px;
-    margin: 10px;
-  }
-  .col-3{
-    float: left;
-    display: block;
-    position: relative;
-    width: 100%;
-  }
+    .container {
+        margin-left: auto;
+        margin-right: auto;
+        width:auto;
+        max-width: 460px;
+        margin: 10px;
+    }
+    .col-3{
+        float: left;
+        display: block;
+        position: relative;
+        width: 100%;
+    }
 }
