feature/123456 - Adiciona outro Alerta de sucesso
feature/123456 - Adicona nova constante. Adiciona margem ao Card. Adiciona Header à lista.

feature/123456 - Altera service para buscar novas pessoas.

--- a/web/views/Home.html
+++ b/web/views/Home.html
@@ -1,22 +1,27 @@
 <div class="container">
-
+  <h1>TESTE</h1>
   <div ng-repeat="p in people" class="col-3 box-content">
     <div class="box card">
-        <div class="box-img col-12">
-            <img class="avatar img-center" src="https://randomuser.me/api/portraits/men/{{p.id}}.jpg" width="100%" alt="">
+      <div class="box-img col-12">
+        <img
+          class="avatar img-center"
+          src="https://randomuser.me/api/portraits/men/{{p.id}}.jpg"
+          width="100%"
+          alt=""
+        />
+      </div>
+      <div class="box-body">
+        <div class="FLeft">
+          <h3 class="col-12">
+            TT {{p.name}}
+            <br />
+            <small>
+              Id: {{p.id}}
+            </small>
+          </h3>
         </div>
-        <div class="box-body">
-            <div class="FLeft">
-                <h3 class="col-12">
-                    {{p.name}}
-                    <br>
-                    <small>
-                        Id: {{p.id}}
-                    </small>
-                </h3>
-            </div>
-            {{p.disclosableInfo}}
-        </div>
+        {{p.disclosableInfo}}
+      </div>
     </div>
   </div>
 </div>
