--- a/web/assets/css/custom.css
+++ b/web/assets/css/custom.css
@@ -1,16 +1,17 @@
 .body {
-    font-family: fantasy;
+  font-family: fantasy;
 }
 
 h3 {
-    color: #757575;
+  color: #757575;
 }
 .box {
-    position: relative;
-    margin: 10px;
+  position: relative;
+  margin: 10px;
 }
 .box-body {
-    padding: 15px;
+  padding: 15px;
+  margin: 5px;
 }
 /*.box:before {
 content: '';
@@ -22,135 +23,132 @@ background-color: #0a5293;
 width: 3px;
 }*/
 .box-content {
-    display: relative;
+  display: relative;
 }
 .box-title {
-    background-color: #e8e6e6;
-    padding: 10px;
+  background-color: #e8e6e6;
+  padding: 10px;
 }
-.box-img{
-    display: block
+.box-img {
+  display: block;
 }
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
 }
 .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
-.FRight{
-    float: right;
+.FRight {
+  float: right;
 }
 .avatar {
-    float: left;
-    margin-top: 1em;
-    margin-right: 1em;
-    margin-left: 1em;
-    margin-bottom: 1em;
-    position: relative;
-    width:64px;
-    heigth:64px;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    border-radius: 50%;
-    -webkit-box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999, 0 2px 5px 4px rgba(0,0,0,.2);
-    -moz-box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999, 0 2px 5px 4px rgba(0,0,0,.2);
-    box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999, 0 2px 5px 4px rgba(0,0,0,.2);
+  float: left;
+  margin-top: 1em;
+  margin-right: 1em;
+  margin-left: 1em;
+  margin-bottom: 1em;
+  position: relative;
+  width: 64px;
+  heigth: 64px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  -webkit-box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999,
+    0 2px 5px 4px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999,
+    0 2px 5px 4px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999, 0 2px 5px 4px rgba(0, 0, 0, 0.2);
 }
 
-
 @media screen and (min-width: 1921px) {
-    .container {
-        margin-left: auto;
-        margin-right: auto;
-        width:auto;
-        max-width: 100%;
-        margin: 25px;
-        position: relative;
-    }
-    .col-3{
-        float: left;
-        display: block;
-        position: relative;
-        width: 20%;
-    }
+  .container {
+    margin-left: auto;
+    margin-right: auto;
+    width: auto;
+    max-width: 100%;
+    margin: 25px;
+    position: relative;
+  }
+  .col-3 {
+    float: left;
+    display: block;
+    position: relative;
+    width: 20%;
+  }
 }
 
 @media screen and (min-width: 721px) and (max-width: 1920px) {
-    .container {
-        margin-left: auto;
-        margin-right: auto;
-        width:auto;
-        max-width: 1900px;
-        margin: 25px;
-        position: relative;
-    }
-    .col-3{
-        float: left;
-        display: block;
-        position: relative;
-        width: 30%;
-    }
-
+  .container {
+    margin-left: auto;
+    margin-right: auto;
+    width: auto;
+    max-width: 1900px;
+    margin: 25px;
+    position: relative;
+  }
+  .col-3 {
+    float: left;
+    display: block;
+    position: relative;
+    width: 30%;
+  }
 }
-
-
 
 @media screen and (min-width: 480px) and (max-width: 720px) {
-    .container {
-        margin-left: auto;
-        margin-right: auto;
-        width:auto;
-        max-width: 700px;
-        margin: 25px;
-    }
-    .col-3{
-        float: left;
-        display: block;
-        position: relative;
-        width: 50%;
-    }
-    .col-12 {
-        float: left;
-        display: block;
-        position: relative;
-        width: 100%;
-        text-align: center;
-    }
-    img.img-center{
-        position:relative;
-        top:50px;
-        left:42%;
-        transform:translate(-50%, -50%);
-    }
+  .container {
+    margin-left: auto;
+    margin-right: auto;
+    width: auto;
+    max-width: 700px;
+    margin: 25px;
+  }
+  .col-3 {
+    float: left;
+    display: block;
+    position: relative;
+    width: 50%;
+  }
+  .col-12 {
+    float: left;
+    display: block;
+    position: relative;
+    width: 100%;
+    text-align: center;
+  }
+  img.img-center {
+    position: relative;
+    top: 50px;
+    left: 42%;
+    transform: translate(-50%, -50%);
+  }
 }
 
-
 @media screen and (mix-width: 480px) {
-    .container {
-        margin-left: auto;
-        margin-right: auto;
-        width:auto;
-        max-width: 460px;
-        margin: 10px;
-    }
-    .col-3{
-        float: left;
-        display: block;
-        position: relative;
-        width: 100%;
-    }
-    .col-12 {
-        float: left;
-        display: block;
-        position: relative;
-        width: 100%;
-        text-align: center;
-    }
-    img.img-center{
-        position:relative;
-        top:50px;
-        left:42%;
-        transform:translate(-50%, -50%);
-    }
+  .container {
+    margin-left: auto;
+    margin-right: auto;
+    width: auto;
+    max-width: 460px;
+    margin: 10px;
+  }
+  .col-3 {
+    float: left;
+    display: block;
+    position: relative;
+    width: 100%;
+  }
+  .col-12 {
+    float: left;
+    display: block;
+    position: relative;
+    width: 100%;
+    text-align: center;
+  }
+  img.img-center {
+    position: relative;
+    top: 50px;
+    left: 42%;
+    transform: translate(-50%, -50%);
+  }
 }
